@@ -1,3 +1,8 @@
+2007-03-19  Jeff Law  <law@redhat.com>
+
+	* PR tree-optimization/30984
+	* gcc.c-torture/pr30984.c: New test.
+
 2007-03-19  Andrew Pinski  <andrew_pinski@playstation.sony.com>
 	Richard Guenther  <rguenther@suse.de>
 
